<?xml version="1.0" encoding="utf-8"?>
<!--
Manuel Romo López
ID: 00000253080
-->
<resources>
    <string name="app_name">AmantePelicula_RomoM</string>
    <string name="movie_name">Dune: Part Two</string>
    <string name="movie_evaluation">8,4/10</string>
    <string name="number_reviews">715mi</string>
    <string name="button_rent">Rentar</string>
    <string name="button_buy">Comprar</string>
    <string name="genre">Género</string>
    <string name="genere_action">Acción</string>
    <string name="genere_drama">Drama</string>
    <string name="genere_fantasy">Fantasía</string>
    <string name="genere_science_fiction">Ciencia Ficción</string>
    <string name="movie_description">Dune: La segunda parte explora el mítico viaje de Paul
        Atreides mientras se una con Chani y los Fremen mientras está en un camino de guerra
        de venganza contra los conspiradores que destruyeron a su familia. Frente a una elección entre el amor de su vida
        y el destino del universo conocido se esfuerza por evitar un futuro terrible que solo él puede prever.</string>

    <string name="log_in_label">Iniciar sesión</string>
    <string name="password_forgotten">¿Olvidaste tu contraseña?</string>
    <string name="btn_enter">Entrar</string>
    <string name="no_account">¿No tienes cuenta? Regístrate</string>

    <string name="log_in_logo_description">Imagen de palomitas</string>

    <string name="hint_user_name">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_like_description">Botón Me gusta</string>
    <string name="btn_save_description">Botón Guardar</string>
    <string name="star_image_description">Imagen de Estrella de calificación</string>
    <string name="btn_heart_description">Botón Añadir a favoritos</string>
    <string name="background_movie_description">Póster horizontal de película</string>
    <string name="movie_image_description">Imagen principal de película</string>

</resources>