<?xml version="1.0" encoding="utf-8"?>

<!--
Manuel Romo López
ID: 00000253080
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:dividerPadding="20sp"
    android:orientation="vertical"
    tools:context=".ActivityMovie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/logo_margin_top"
            android:contentDescription="@string/log_in_logo_description"
            app:srcCompat="@drawable/ic_palomitas" />

        <TextView
            android:id="@+id/tvLogInLabel"
            style="@style/Titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/log_in_label_margin_top"
            android:layout_marginBottom="@dimen/log_in_label_margin_bottom"
            android:text="@string/log_in_label"/>

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_name_edit_text_height"
            android:layout_marginStart="@dimen/user_name_edit_text_margin_start"
            android:layout_marginEnd="@dimen/user_name_edit_text_margin_end"
            android:layout_marginBottom="@dimen/user_name_edit_text_margin_bottom"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/hint_user_name"
            android:imeOptions="flagNoExtractUi"
            android:inputType="text" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/password_edit_text_height"
            android:layout_marginLeft="@dimen/password_edit_text_margin_left"
            android:layout_marginRight="@dimen/password_edit_text_margin_right"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/hint_password"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tvForgottenPasswordLabel"
            style="@style/NotesLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/forgotten_password_label_margin_top"
            android:layout_marginBottom="@dimen/forgotten_password_label_margin_bottom"
            android:text="@string/password_forgotten" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_enter" />

        <TextView
            android:id="@+id/tvNoAccountLabel"
            style="@style/NotesLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/no_account_label_margin_top"
            android:layout_marginBottom="@dimen/no_account_label_margin_bottom"
            android:text="@string/no_account" />
    </LinearLayout>

</ScrollView>